<resources>
    <string name="app_name">Wallhalla</string>
    <string name="internet_connection_not_available">Internet connection not available...</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="send_feedback">Send Feedback</string>
    <string name="tell_me_what_you_think_about_this_app_suggest_ideas_bug_reports_and_improvements">Tell me what you think about this app, suggest ideas, bug reports and improvements</string>
    <string name="app_version">App Version</string>
    <string name="share_this_app_with_your_friends_and_family">Share this app with your friends and family</string>
    <string name="recommend">Recommend</string>
    <string name="about">About</string>
    <string name="select_screen">Select Screen</string>
    <string name="home_screen">Home Screen</string>
    <string name="lock_screen">Lock Screen</string>
    <string name="both">Both</string>
    <string name="select_theme">Select Theme</string>
    <string name="light_theme">Light Theme</string>
    <string name="dark_theme">Dark Theme</string>
    <string name="system_default">System Default</string>
    <string name="search">Search...</string>
    <string name="options">Options</string>
    <string name="theme">Theme</string>
    <string name="collections">Collections</string>
    <string name="favourites">Favourites</string>
    <string name="settings">Settings</string>
    <string name="wallhalla">Wallhalla</string>
    <string name="choose_your_theme">Choose your theme</string>
    <string name="rate_this_app">Rate this app</string>
    <string name="app_feedback">App Feedback Wallhalla</string>
    <string name="hello">Hello</string>
    <string name="feedback_message">I want to give feedback about the app.</string>
    <string name="download_wallhalla">Download Wallhalla</string>
    <string name="view_on_github">View on Github -></string>
    <string name="sign_in_to_wallhalla">Sign in to Wallhalla</string>
    <string name="sign_in">Sign in</string>
    <string name="email">Email address</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="log_in">Log in</string>
    <string name="remember_password">Remember password</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign up</string>
    <string name="or">OR</string>
    <string name="login_with_google">Login with Google</string>
    <string name="skip_now">Skip now —></string>
    <string name="full_name">Full name</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="default_photo_quality">Default Photo Quality</string>
    <string name="select_quality">Select Quality</string>
    <string name="original">Original</string>
    <string name="large2x">Large2x</string>
    <string name="large">Large</string>
    <string name="medium">Medium</string>
    <string name="small">Small</string>
    <string name="portrait">Portrait</string>
    <string name="landscape">Landscape</string>
    <string name="tiny">Tiny</string>
    <string name="minimum_6_characters">Minimum 6 characters</string>
    <string name="guest">Guest</string>
</resources>