<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="24dp">

        <ImageView
            android:id="@+id/iv_title"
            android:layout_width="94dp"
            android:layout_height="94dp"
            android:layout_gravity="center"
            android:layout_marginTop="24dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/akaya_telivigala"
            android:text="@string/log_in"
            android:textSize="24sp"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            app:endIconMode="clear_text">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_mail"
                android:drawablePadding="12dp"
                android:hint="@string/email"
                android:inputType="textEmailAddress" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            app:endIconMode="password_toggle">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_lock"
                android:drawablePadding="12dp"
                android:hint="@string/password" />

        </com.google.android.material.textfield.TextInputLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp">

            <Switch
                android:id="@+id/cb_remember_password"
                style="@style/TextAppearance.AppCompat.Widget.Switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start" />

            <TextView
                android:id="@+id/tv_remember_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start|center_vertical"
                android:layout_marginStart="48dp"
                android:text="@string/remember_password" />

            <TextView
                android:id="@+id/tv_forgot_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|end"
                android:gravity="end|center_vertical"
                android:text="@string/forgot_password"
                android:textColor="@color/blue" />

        </FrameLayout>

        <Button
            android:id="@+id/sign_in_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/sign_in" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="23dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/don_t_have_an_account" />

            <TextView
                android:id="@+id/tv_sign_up"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:text="@string/sign_up"
                android:textColor="@color/blue" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:orientation="horizontal">

            <View
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:layout_gravity="center"
                android:layout_marginEnd="24dp"
                android:layout_weight="1"
                android:background="@color/gray" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/or" />

            <View
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:layout_gravity="center"
                android:layout_marginStart="24dp"
                android:layout_weight="1"
                android:background="@color/gray" />

        </LinearLayout>

        <ImageButton
            android:id="@+id/sign_in_google"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:background="@drawable/info_background_circle"
            android:padding="8dp"
            android:src="@drawable/ic_google" />

        <TextView
            android:id="@+id/tv_skip_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="12dp"
            android:text="@string/skip_now"
            android:textStyle="bold" />

    </LinearLayout>

</ScrollView>