<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/iv_user_profile"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_margin="24dp"
            android:src="@drawable/ic_person"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_settings_title"
            app:shapeAppearanceOverlay="@style/RoundedImageViewOverlay"
            app:strokeColor="@color/red"
            app:strokeWidth="1dp" />

        <TextView
            android:id="@+id/tv_display_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:text="@string/guest"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@id/iv_logout"
            app:layout_constraintStart_toEndOf="@id/iv_user_profile"
            app:layout_constraintBottom_toTopOf="@id/tv_email"
            app:layout_constraintTop_toTopOf="@id/iv_user_profile" />

        <TextView
            android:id="@+id/tv_email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:visibility="gone"
            android:text="harunuyan6@gmail.com"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/iv_user_profile"
            app:layout_constraintEnd_toStartOf="@id/iv_logout"
            app:layout_constraintStart_toEndOf="@id/iv_user_profile" />

        <ImageView
            android:id="@+id/iv_logout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:src="@drawable/ic_logout"
            app:layout_constraintBottom_toBottomOf="@id/tv_display_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/tv_display_name" />

        <View
            android:id="@+id/view_divider_title"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginTop="24dp"
            android:background="@color/dark_gray"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_user_profile" />

        <TextView
            android:id="@+id/tv_settings_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/annie_use_your_telescope"
            android:padding="10dp"
            android:text="@string/settings"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="33sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_options"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="22dp"
            android:text="@string/options"
            android:textColor="#616161"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/view_divider_title" />

        <LinearLayout
            android:id="@+id/ll_theme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:orientation="vertical"
            android:padding="24dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_options">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/theme"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_theme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#616161"
                android:textSize="15sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_quality"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:orientation="vertical"
            android:padding="24dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ll_theme">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/default_photo_quality"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_quality"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#616161"
                android:textSize="15sp" />

        </LinearLayout>

        <View
            android:id="@+id/view_divider"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:background="@color/dark_gray"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ll_quality" />

        <TextView
            android:id="@+id/tv_about"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="22dp"
            android:text="@string/about"
            android:textColor="#616161"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/view_divider" />

        <LinearLayout
            android:id="@+id/ll_recommend"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:orientation="vertical"
            android:padding="24dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_about">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/recommend"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/share_this_app_with_your_friends_and_family"
                android:textColor="#616161"
                android:textSize="15sp" />

        </LinearLayout>

        <TextView
            android:id="@+id/tv_rate_app"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:padding="24dp"
            android:text="@string/rate_this_app"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ll_recommend" />

        <LinearLayout
            android:id="@+id/ll_send_feedback"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:orientation="vertical"
            android:padding="24dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_rate_app">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/send_feedback"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tell_me_what_you_think_about_this_app_suggest_ideas_bug_reports_and_improvements"
                android:textColor="#616161"
                android:textSize="15sp" />

        </LinearLayout>

        <TextView
            android:id="@+id/tv_privacy_policy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:padding="24dp"
            android:text="@string/privacy_policy"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ll_send_feedback" />

        <LinearLayout
            android:id="@+id/ll_app_version"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:orientation="vertical"
            android:padding="24dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_privacy_policy">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/app_version"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="1.0.7"
                android:textColor="#616161"
                android:textSize="15sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/view_on_github"
                android:textColor="@color/blue"
                android:textSize="15sp" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>